[package]
name = "dcmimu"
version = "0.3.0"
authors = ["Alexander Zhuravlev", "Roma Sokolov", "Dennis Estenson"]
description = "DCM IMU implementation"
keywords = ["dcm", "imu", "kalman", "sensor-fusion"]
categories = ["embedded", "hardware-support", "navigation"]
license = "MIT"
repository = "https://github.com/destenson/copterust--dcmimu"
readme = "README.md"

[dev-dependencies]
assert_approx_eq = "1.1.0"
csv = "1.0.0"
ryu = "0.2"
